# lsh-cascade-poc

./: .gitignore  CASCADE_SEARCH_DESIGN.md  README.md  SPECIFICATION.md  pyproject.toml  run_experiment.py
examples/: cascade_search_example.py
notebooks/: 00_final_report.ipynb  01_basic_verification.ipynb  01_v2_basic_verification.ipynb  02_lsh_accuracy_analysis.ipynb  02_v2_lsh_accuracy_analysis.ipynb  03_embedding_model_comparison.ipynb  04_whitening_experiment.ipynb  05_e2lsh_experiment.ipynb  06_e2lsh_pipeline.ipynb  06_v2_e2lsh_pipeline.ipynb  07_v2_e2lsh_accuracy_analysis.ipynb  07_v3_e2lsh_filtering_analysis.ipynb  08_e2lsh_query_analysis.ipynb  09_e2lsh_cascading_filter.ipynb  10_e2lsh_multiprobe.ipynb  11_e2lsh_multiprobe_query_analysis.ipynb  12_simhash_improvement.ipynb  13_presample_gridsearch.ipynb  14_create_experiment_db.ipynb  15_large_scale_evaluation.ipynb  16_mixed_length_hyperplanes.ipynb  17_hybrid_hyperplanes.ipynb  18_query_passage_hyperplanes.ipynb  19_dual_prefix_search.ipynb  20_no_prefix_experiment.ipynb  21_itq_lsh_experiment.ipynb  22_itq_hybrid_search.ipynb  30_multistage_lsh_filtering.ipynb  31_multiprobe_lsh.ipynb  32_improved_segment_lsh.ipynb  33_overlap_cascade_filtering.ipynb  34_alternative_lsh_filtering.ipynb  35_segment_width_small_dataset.ipynb  36_hnsw_topk_hamming_analysis.ipynb  41_fastembed_investigation.ipynb  42_itq_retraining_necessity.ipynb  43_e5_model_size_comparison.ipynb  44_e5_base_bits_evaluation.ipynb  45_e5_base_fastembed_compatibility.ipynb  46_fastembed_practical_speed.ipynb  (+28 more)
scripts/: analyze_prefix_vectors.py  (+8 more)
(+17 files in other folders)
