[project]
name = "lsh-cascade-poc"
version = "0.1.0"
description = "PoC for LSH-based 3-stage filtering in large-scale vector search"
readme = "SPECIFICATION.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "duckdb>=1.0.0",
    "sentence-transformers>=3.0.0",
    "datasets>=2.10.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "einops>=0.7.0",
    "fastembed>=0.3.0",
]

[project.optional-dependencies]
experiment = [
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
    "matplotlib>=3.7.0",
    "h5py>=3.15.1",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]
